--- a/boards.cfg
+++ b/boards.cfg
@@ -500,6 +500,7 @@ f4775_uImage_nand            mips        xburst      f4775               ingenic
 f4775_uImage_spinor          mips        xburst      f4775               ingenic        jz4775      f4775:SPL_SPI_SUPPORT
 halley_uImage_spinor         mips        xburst      halley              ingenic        m150        halley:SPL_SPI_SUPPORT
 halley_linux_nand			 mips        xburst      halley               ingenic        m150		halley:JZ_NAND_MGR,
+trunk_zImage_spinor          mips        xburst      trunk               ingenic        m150        trunk:SPL_SPI_SUPPORT,SPL_OS_BOOT,BOOT_ZIMAGE
 gemini_android_msc0          mips        xburst      gemini              ingenic        jz4775	    gemini:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,BOOT_ANDROID
 gemini_uImage_msc0           mips        xburst      gemini              ingenic        jz4775      gemini:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR
 mensa_android_msc0           mips        xburst      mensa               ingenic        jz4775      mensa:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,BOOT_ANDROID,GPT_AT_TAIL
