--- a/boards.cfg
+++ b/boards.cfg
@@ -541,6 +541,7 @@ dorado_v21_uImage_rvms       mips        xburst      dorado              ingenic
 dorado_v21_command_sf_rvms   mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,RVMS,DORADO_V21,COMMAND_SPI
 dorado_v20_uImage_msc0       mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V20
 dorado_v22_uImage_msc0       mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V22
+dorado_tizen_uImage          mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V22,TIZEN_OS
 dorado_android_msc0          mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V21,BOOT_ANDROID
 dorado_v20_android_msc0      mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V20,BOOT_ANDROID
 dorado_v22_android_msc0      mips        xburst      dorado              ingenic        m200		dorado:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0,DORADO_V22,BOOT_ANDROID
