--- a/boards.cfg
+++ b/boards.cfg
@@ -571,7 +571,7 @@ phoenix_v10_uImage_sfc_nand  mips        xburst      phoenix			 ingenic		x1000  
 canna_v10_uImage_sfc_nor     mips        xburst      canna			 ingenic        x1000       canna:SPL_SFC_NOR
 canna_v10_zImage_sfc_nor     mips        xburst      canna			 ingenic        x1000       canna:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE
 canna_v10_uImage_msc0        mips        xburst      canna        	 ingenic        x1000		canna:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,MBR_CREATOR,LARGE_MBR,JZ_MMC_MSC0
-doss_v10_zImage_sfc_nor      mips        xburst      doss			 ingenic        x1000       doss:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE
+aslmom_v10_zImage_sfc_nor      mips        xburst      aslmom			 ingenic        x1000       aslmom:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_ZIMAGE
 phoenix_v10_uImage_spi_nand  mips        xburst      phoenix			 ingenic		x1000       phoenix:SPL_SPI_NAND
 halley2_v10_uImage_sfc_nor   mips        xburst      halley2			 ingenic        x1000       halley2:SPL_SFC_NOR,ENV_IS_IN_SFC
 burner_x1000_lpddr           mips        xburst      burner_x1000		 ingenic        x1000       burner_x1000:DDR_TYPE_LPDDR,MTD_SPINAND
