--- a/boards.cfg
+++ b/boards.cfg
@@ -563,11 +563,12 @@ k1mbv01_uImage_rvms          mips        xburst      k1mbv01             ingenic
 k1mbv02_uImage_rvms          mips        xburst      k1mbv02             ingenic        m200		k1mbv02:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 k1mbv04_uImage_rvms          mips        xburst      k1mbv04             ingenic        m200		k1mbv04:SPL_MMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
 phoenix_v10_uImage_msc0      mips        xburst      phoenix        	 ingenic        x1000		phoenix:SPL_JZMMC_SUPPORT,ENV_IS_IN_MMC,GPT_CREATOR,JZ_MMC_MSC0
-phoenix_v10_uImage_sfc_nor   mips        xburst      phoenix			 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC
-phoenix_v10_xImage_sfc_nor   mips        xburst      phoenix			 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE
-phoenix_v10_uImage_spi_nand  mips        xburst      phoenix			 ingenic		x1000       phoenix:SPL_SPI_NAND
-halley2_v10_uImage_sfc_nor   mips        xburst      halley2			 ingenic        x1000       halley2:SPL_SFC_NOR,ENV_IS_IN_SFC
-burner_x1000_lpddr           mips        xburst      burner_x1000		 ingenic        x1000       burner_x1000:DDR_TYPE_LPDDR,MTD_SPINAND
+phoenix_v10_uImage_sfc_nor   mips        xburst      phoenix		 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC
+phoenix_v10_xImage_sfc_nor   mips        xburst      phoenix		 ingenic        x1000       phoenix:SPL_SFC_NOR,ENV_IS_IN_SFC,SPL_OS_BOOT,BOOT_XIMAGE
+phoenix_v10_uImage_spi_nand  mips        xburst      phoenix		 ingenic	x1000       phoenix:SPL_SPI_NAND
+halley2_v10_uImage_spi_nand  mips        xburst      halley2		 ingenic	x1000       halley2:SPL_SPI_NAND
+halley2_v10_uImage_sfc_nor   mips        xburst      halley2		 ingenic        x1000       halley2:SPL_SFC_NOR,ENV_IS_IN_SFC
+burner_x1000_lpddr           mips        xburst      burner_x1000	 ingenic        x1000       burner_x1000:DDR_TYPE_LPDDR,MTD_SPINAND
 adp-ag101                    nds32       n1213       adp-ag101           AndesTech      ag101
 adp-ag101p                   nds32       n1213       adp-ag101p          AndesTech      ag101
 adp-ag102                    nds32       n1213       adp-ag102           AndesTech      ag102
